--- a/application/views/ncnu/style.css
+++ b/application/views/ncnu/style.css
@@ -64,7 +64,7 @@ body{
 	margin: 0px 15px;
 	vertical-align: middle;
 }
-#resetC button{
+#resetC button, #customC button{
 	padding: 3px 10px !important;
 	margin: 0px 20px;
 }
